--- a/styles/style.css
+++ b/styles/style.css
@@ -30,3 +30,22 @@ hr {
   opacity: 0.5;
   margin-bottom: 20px;
 }
+
+.paginat {
+  display: flex;
+  justify-content: center;
+}
+
+.cicle {
+  position: absolute;
+
+  height: 705.306px;
+  z-index: -1;
+  flex-shrink: 0;
+  border-radius: 768px;
+  filter: blur(190.0989990234375px);
+  top: 3483px;
+  right: 376px;
+  width: 768px;
+  background: rgba(253, 212, 70, 0.5);
+}
